# jotup

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  flake.nix  justfile  justfile.jotup.just
.config/flakebox/: id
.config/selfci/: ci.sh
.github/workflows/: ci.yml
examples/jotup_wasm/: Cargo.toml
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: compare_renderers.rs  html.rs  parse.rs
src/: block.rs  help.txt  html.rs  inline.rs  lex.rs  lib.rs
src/html/: filters.rs  tokio.rs
tests/: filters.rs
tests/afl/src/: lib.rs
tests/html-ut/: cmp.rs
